test-suite/typecheck/pass/int_to_string.first
import * "Prelude"
function f(n: Int) -> String {
  return intToString(n);
}
