test-suite/typecheck/fail/interface_method_missing.first
import * "Prelude"
interface Foo<T> { bar: function(T) -> Int; }
implementation Foo<Int> { }
function f() -> Int { return 0; }
